--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,5 +29,6 @@
 </div> -->
 
 <div>
-  <app-productlist></app-productlist>
+  <!-- <app-productlist></app-productlist> -->
+  <app-operas-bas></app-operas-bas>
 </div>
