--- a/src/app/product/productlist/productlist.component.html
+++ b/src/app/product/productlist/productlist.component.html
@@ -18,7 +18,7 @@
 
             <div class="col-md-4">
 
-                <input type="text" class="form-control" name="filter">
+                <input [(ngModel)]="listFilter" type="text" class="form-control" name="filter">
 
             </div>
 
@@ -28,9 +28,9 @@
 
             <div class="col-md-6">
 
-                <h3>Filtro:
+                <h3>
 
-
+                    Filtro: {{listFilter}}
 
                 </h3>
 
@@ -40,12 +40,12 @@
 
         <div class="table-responsive">
 
-            <table class="table" *ngIf="productos.length">
+            <table class="table" *ngIf="producto.length">
 
                 <thead>
 
                     <tr>
-                        <th> <button (click)="showImage()" type="button" class="btn btn-primary">Imagen</button></th>
+                        <th> <button (click)="showImage()" type="button" class="btn btn-primary">{{muestraImg?'Ocultar ':'Mostrar '}}Imagen</button></th>
                         <th>Modelo</th>
                         <th>Descripcion</th>
                         <th>Año</th>
@@ -58,7 +58,7 @@
 
                 <tbody>
 
-                    <tr *ngFor="let producto of productos">
+                    <tr *ngFor="let producto of producto | productoFilter:listFilter">
 
                         <td><img *ngIf="muestraImg" [src]="producto.ImagenURL" alt="" [width]="imageWidth" [title]="producto.Modelo" [style.width.px]="imageWidth" [style.margin.px]="imageMargi"></td>
                         <td>{{producto.Modelo}}</td>
