Viernes 20-09-2024 "Practica Cinepolis"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>IEVN1003</h1>
+<!-- <h1>IEVN1003</h1> -->
 
 <!-- <p>Esto es un saludo...</p>
 
@@ -30,5 +30,7 @@
 
 <div>
   <!-- <app-productlist></app-productlist> -->
-  <app-operas-bas></app-operas-bas>
+  <!-- <app-operas-bas></app-operas-bas> -->
+  <!-- <app-ejemplo1></app-ejemplo1> -->
+  <app-cinepolis></app-cinepolis>
 </div>
