--- a/src/app/formularios/cinepolis/cinepolis.component.html
+++ b/src/app/formularios/cinepolis/cinepolis.component.html
@@ -6,43 +6,51 @@
     <title>Práctica Angular</title>
 </head>
 <body>
-    <h1>Compra de boletos Cinepolis</h1>
-    <div>
+    <div class="main-container">
+        <div class="container">
+            <h1>Compra de boletos Cinepolis</h1>
+            <div [formGroup]="formularioCompra">
 
-        <label for="">
+                <div class="mb-3">
+                    <label for="nombreComprador">Nombre:</label>
+                    <input type="text" id="nombreComprador" formControlName="nombreComprador">
+                </div>
 
-            <div>
+                <div class="mb-3">
+                    <label for="numCompradores">No. de compradores:</label>
+                    <input type="number" id="numCompradores" formControlName="numCompradores">
+                </div>
 
-                Nombre:
-                <br>
-                <input type="text" formControlName="nombrecomprador">
+                <div class="mb-3">
+                    <label>¿Cuentas con tarjeta CINECO?</label>
+                    <div class="radio-group">
+                        <label>Si
+                            <input type="radio" formControlName="cineco" value="si">
+                        </label>
+                        <label>No
+                            <input type="radio" formControlName="cineco" value="no">
+                        </label>
+                    </div>
+                </div>
 
+                <div class="mb-3">
+                    <label for="numBoletos">No. de boletos:</label>
+                    <input type="number" id="numBoletos" formControlName="numBoletos">
+                    <div *ngIf="formularioCompra.get('numBoletos')?.errors?.['limiteExcedido'] && formularioCompra.get('numBoletos')?.touched">
+                        <span class="error-message">No se pueden comprar más de {{ formularioCompra.get('numCompradores')?.value * 7 }} boletos</span>
+                    </div>
+                </div>
+
+                <button (click)="onSubmit()">Comprar</button>
             </div>
-            <div>
+        </div>
 
-                No. de compradores:
-                <br>
-                <input type="number" formControlName="numCompradores">
-
-            </div>
-            <div class="mb-3">
-
-                ¿Cuentas con tarjeta CINECO?
-                <br>
-                
-                <div>Si<input type="radio" formControlName="tarSi">No<input type="radio" formControlName="tarNo"></div>
-
-            </div>
-            <div>
-
-                No. de boletos:
-                <br>
-                <input type="number" formControlName="numBoletos">
-
-            </div>
-            
-        </label>
-
+        <div *ngIf="mostrarInfo" class="info-box">
+            <h3>Resumen de la compra:</h3>
+            <p><strong>Nombre del comprador:</strong> {{ nombreComprador }}</p>
+            <p><strong>Número de boletos:</strong> {{ numBoletos }}</p>
+            <p><strong>Total a pagar:</strong> ${{ totalpagar }}</p>
+        </div>
     </div>
 </body>
 </html>
