--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,5 +32,6 @@
   <!-- <app-productlist></app-productlist> -->
   <!-- <app-operas-bas></app-operas-bas> -->
   <!-- <app-ejemplo1></app-ejemplo1> -->
-  <app-cinepolis></app-cinepolis>
+  <!-- <app-cinepolis></app-cinepolis> -->
+  <app-resistencia></app-resistencia>
 </div>
