--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,5 +33,6 @@
   <!-- <app-operas-bas></app-operas-bas> -->
   <!-- <app-ejemplo1></app-ejemplo1> -->
   <!-- <app-cinepolis></app-cinepolis> -->
-  <app-resistencia></app-resistencia>
+  <!-- <app-resistencia></app-resistencia> -->
+  <app-signozodiacal></app-signozodiacal>
 </div>
